high contrast mode fix

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1743,7 +1743,8 @@ body.theme--highcontrast #header #appmenu li .icon-more-white {
     background-image: var(--icon-more-000);
 }
 body.theme--dark.theme--highcontrast #header .header-menu.unified-search a.header-menu__trigger,
-body.theme--highcontrast #header .notifications-button.hasNotifications {
+body.theme--highcontrast #header .notifications-button.hasNotifications,
+body.theme--highcontrast #unified-search .header-menu__trigger {
     opacity: 1 !important;
 }
 body.theme--dark.theme--highcontrast #header #appmenu li:hover a,
